# WeTest

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: editorconfig.yml  nix-build.yml  release.yml  ruff.yml
doc/: scenario_schema.yaml
nix/checks/: default.nix  simple.nix
tests/: acceptance-demo.yaml  bad.yml  gui-testing.yaml  include-testing-1.yaml  macro-testing.yaml  mks946-testing.yaml  mks946.yaml  scenario_example01.yaml  scenario_example02.yaml  scenario_example03.yaml  scenario_example04.yaml  scenario_example05.yaml  source-at-0-reference.yml  suite_example01.yaml  test_schema.py  test_testing_generator.py  test_testing_reader.py  type-testing.yaml
wetest/: command_line.py  command_line.py_20231127T132554Z
wetest/common/: constants.py
wetest/generic/: README.md  weTest_functional_generic_power_supply_config.yaml  weTest_functional_generic_power_supply_init.yaml  weTest_functional_generic_power_supply_turn_on.yaml  weTest_unit_generic_power_supply.yaml
wetest/generic/specific/: weTest_functional_CAENels_PS_FAST_1K5_current.yaml  weTest_functional_basicPowerSupply.yaml  weTest_functional_tdk_lambda_genesys.yaml  weTest_unit_CAENels_PS_FAST_1K5.yaml  weTest_unit_spellman.yaml  weTest_unit_tdk_lambda_genesys.yaml
wetest/gui/: base.py  generator.py  specific.py
wetest/pvs/: core.py  naming.py  parse.py
wetest/report/: generator.py
wetest/resources/: scenario_schema.yaml
wetest/testing/: generator.py  reader.py
wetest/tests/: gui-testing.yaml  include-testing-0.yaml  include-testing-2.yaml  include-testing-3.yaml  include-testing-empty.yaml  include-testing-file_not_found.yaml  include-testing-lacks_config.yaml  include-testing-lacks_tests.yaml  macro-testing.yaml  mks946.yaml  scenario_example02.yaml  scenario_example03.yaml  scenario_example05.yaml  scenario_range.yaml  scenario_testing_naming.yaml  suite_example01.yaml  suite_example02.yaml  suite_with_macros.yaml  test_report_generator.py  test_schema.py  test_testing_generator.py  test_testing_reader.py  type-testing.yaml
wetest/tests/results_samples/: no_error.xml  with_errors.xml
